# rialto-servermanager

./: CMakeLists.txt  LICENSE  NOTICE  README.md
src/: Logging.h  Main.cpp  RialtoConnection.cpp  RialtoConnection.h  RialtoRpcWs.cpp  RialtoRpcWs.h  RialtoRpcWsServer.h
src/docs/: rialto-servermanager-api.json  rialto-servermanagerAPI.md
